<resources>

    <string name="app_name">MVP Learning</string>
    <string name="app_version">v1.0</string>
    <string name="password">Password</string>
    <string name="please_enter_username_password">Please Enter UserName Password</string>
    <string name="login">LOGIN</string>
    <string name="user_name">User Name</string>

    <!-- Use For Login  Activity-->

    <string name="user_name_st">123</string>
    <string name="user_password_st">123</string>
    <string name="login_preference">com.example.mvplearning.login_preference</string>
    <string name="login_status_preference">com.example.mvplearning.login_status_preference</string>
    <string name="welcome">Welcome MVP</string>
    <string name="sign_in">Sign In</string>
    <string name="sign_up">Sign Up</string>
    <string name="search">Search</string>
    <string name="share">Share</string>
    <string name="log_out">Log Out</string>
    <string name="setting">Setting</string>
    <string name="welcome_home">Welcome Home</string>

</resources>