<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/menuActionSearch"
        android:icon="@mipmap/ic_search"
        android:title="@string/search"
        app:actionViewClass="androidx.appcompat.widget.SearchView"
        app:showAsAction="ifRoom|collapseActionView" />

    <item
        android:id="@+id/menuActionShare"
        android:icon="@mipmap/ic_share"
        android:title="@string/share"

        app:showAsAction="ifRoom" />



    <item
        android:id="@+id/menuActionSetting"
        android:title="@string/setting"
        app:showAsAction="never" />

    <item
        android:id="@+id/menuActionLogout"
        android:title="@string/log_out"
        app:showAsAction="never" />

</menu>